--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
             <h4 class="clr4 fnt-bld txt-upr">ICO Wallet</h4>
             <p>In order to participate in our ICO please complete this three-step process.
               <span>
-                <b class="clr4">STEP 1:</b> Set up your WorldBit Wallet below (or import your wallet string).</span>
+                <b class="clr4">STEP 1:</b> Set up your WorldBit Wallet below (or import your wallet string). </span>
               <span>
-                <b class="clr4">STEP 2:</b> Write down AND download your 12-word key. .</span>
+                <b class="clr4">STEP 2:</b> Write down AND download your 12-word key. </span>
               <span>
-                <b class="clr4">STEP 3:</b> Contribute ETH in order to have your tokens appear in your WorldBit Wallet..</span>
+                <b class="clr4">STEP 3:</b> Contribute ETH in order to have your tokens appear in your WorldBit Wallet.</span>
             </p>
           </div>
         </div>
