--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                   <div class="col-md-6 col-lg-6 col-sm-12">
                     <div class="checkbox">
                       <label for="checkbox_agree_tos">
-                        <input type="checkbox" name="checkboxes" id="checkbox_agree_tos" required> I agree to the <a href="https://wallet.worldbit.com/terms.htm" target="_blank">Terms of Sale</a> for WorldBit tokens
+                        <input type="checkbox" name="checkboxes" id="checkbox_agree_tos" required> I agree to the
+                        <a href="https://wallet.worldbit.com/terms.htm" target="_blank">Terms of Sale</a> for WorldBit tokens
                       </label>
                       <button id="btn_continue_step1" type="submit" class="bg-clr1 orange_btn button-normal" href="#">Continue</button>
                     </div>
@@ -209,9 +210,9 @@
                   <a onclick="shapeshift_click(this, event);" href="#">
                     <img src="images/xs_light_ss.png" class="ss-button">
                   </a>
-                  <p>Implement the new multi-currency (ETH and WBT) embedded wallet. Allow basic WorldBit Explorer app usage
-                    without sign in. New embedded image capture camera. Implement external wallet import. Add USD estimated
-                    prices at wallet and items.</p>
+                  <p>0.5 ETH minimum is
+                    <strong>only</strong> for using ShapeShift to convert tokens to ETH. You may send any amount of ETH to this wallet
+                    address to purchase any amount WBT!</p>
                 </div>
               </div>
 
@@ -221,8 +222,8 @@
                 </div>
                 <a href="https://worldbit.com/kyc" target="_blank" class="clr5 m-10 pt-20">Please fill out KYC info to enable Send button </a>
                 <p class="m-10 clr4">
-                  <i>Allow basic WorldBit Explorer app usage without sign in. New embedded image capture camera. Implement external
-                    wallet import. Add USD estimated prices at wallet and items.</i>
+                  <i>This is not necessary to use this wallet, as no tokens can be transferred until after the ICO. KYC is for
+                    sending tokens after the ICO and does not affect the functionality of this wallet.</i>
                 </p>
               </div>
             </div>
@@ -316,11 +317,9 @@
                   <p id="consolebuy" class="console"></p>
                 </div>
                 <div class="mt-20">
-
-                  <p class="m-10">Allow basic WorldBit Explorer app usage without sign in. New embedded image capture camera. Implement external
-                    wallet import.</p>
-                  <p class="m-10">Allow basic WorldBit Explorer app usage without sign in. New embedded image capture camera. Implement external
-                    wallet import.</p>
+                  <p class="m-10">It may take a few minutes for your ETH to appear in the wallet, please be patient.</p>
+                  <p class="m-10">Remember to keep a little ETH in this wallet! During the ICO you will be able to deploy portals and objects
+                    into the WorldBit system for only the cost of ETH gas!</p>
                 </div>
               </div>
             </div>
