- fix typos - add terms.htm

--- a/index.html
+++ b/index.html
@@ -395,6 +395,10 @@
         setInterval(rebalance, 10000);
       });
     </script>
+    <!-- <script src="https://affiliate.worldbit.com/assets/trakingpixel/trakingpixel.js"></script>
+    <script type="text/javascript">
+      calltraking(10);
+    </script> -->
 </body>
 
 </html>
